--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "hw-12-employee-tracker",
+  "name": "employee-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/comatosino/hw-12-employee-tracker.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/comatosino/hw-12-employee-tracker/issues"
-  },
-  "homepage": "https://github.com/comatosino/hw-12-employee-tracker#readme",
   "dependencies": {
-    "inquirer": "^8.0.0",
-    "mysql": "^2.18.1"
+    "console.table": "^0.10.0",
+    "dotenv": "^16.0.2",
+    "inquirer": "^8.2.4",
+    "mysql2": "^2.3.3"
   }
 }
